cli/tests/testdata/bench/unhandled_rejection.out
Check [WILDCARD]/bench/unhandled_rejection.ts
<<<<<<< HEAD
error: (in promise) Error: rejection
=======
error: Uncaught (in promise) Error: rejection
>>>>>>> 172e5f0a0 (1.38.5 (#21469))
  reject(new Error("rejection"));
         ^
    at [WILDCARD]/bench/unhandled_rejection.ts:2:10
    at new Promise (<anonymous>)
    at [WILDCARD]/bench/unhandled_rejection.ts:1:1
<<<<<<< HEAD
This error was not caught from a benchmark and caused the bench runner to fail on the referenced module.
It most likely originated from a dangling promise, event/timeout handler or top-level code.

error: Bench failed
=======
>>>>>>> 172e5f0a0 (1.38.5 (#21469))
